--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
   <h1>git is awesome</h1>
+  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et unde optio recusandae in, architecto omnis dolorem. Voluptates aliquid sunt facilis quos? Amet iure nemo culpa! Aliquam autem corrupti ipsam explicabo?</p>
 </body>
 </html>
